--- a/index.html
+++ b/index.html
@@ -3,55 +3,116 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Título de la Página</title>
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <!-- Estilos personalizados -->
   <link rel="stylesheet" href="styles.css">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #ffffff; /* Fondo blanco */
+    }
+    .navbar {
+      background-color: #b4d4ff !important; /* Color de la barra de navegación */
+      border-bottom: 1px solid #6fa3ef; /* Borde inferior */
+      height: 30px; /* Altura del navbar */
+      padding-top: 0; /* Espacio superior */
+      padding-bottom: 0; /* Espacio inferior */
+    }
+    .navbar-brand img {
+      max-height: 30px; /* Altura máxima de la imagen */
+    }
+    .navbar-nav .nav-link {
+      color: #ffffff !important; /* Color del texto en la barra de navegación */
+      font-size: 14px; /* Tamaño de fuente */
+    }
+    .navbar-nav .nav-link:hover {
+      color: #6fa3ef !important; /* Cambio de color al pasar el cursor sobre los ítems de navegación */
+    }
+    .navbar-toggler {
+      border-color: #ffffff !important; /* Color del icono del botón de navegación */
+    }
+    .navbar-toggler-icon {
+      background-color: #ffffff; /* Color del icono del botón de navegación */
+    }
+    .footer {
+      background-color: #b4d4ff;
+      color: #238636;
+      text-align: center;
+      padding: 20px 0;
+      margin-top: 50px;
+    }
+  </style>
 </head>
 <body>
 
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-      <a class="navbar-brand" href="#">Nombre de la Empresa</a>
+      <a class="navbar-brand" href="#"><img src="/images/logos/Screenshot_1-removebg-preview.png" alt="Luffytaro"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Inicio</a>
+          </li>
           <li class="nav-item active">
-            <a class="nav-link" href="#">Inicio</a>
+            <a class="nav-link" href="galeria.html">Galería</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Galería</a>
+            <a class="nav-link" href="contacto.html">Contacto</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contacto</a>
+            <a class="nav-link" href="formulario.html">Pedidos</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
 
+ <!-- Contenido principal -->
+ <div class="container text-center">
   <!-- Carrusel -->
   <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="imagen1.jpg" class="d-block w-100" alt="...">
+        <img src="/images/carrusel/funko-pop-700-leorio-hunter-x-hunter-anime-.jpg" class="d-block img-fluid" alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h5>Título 1</h5>
-          <p>Descripción 1</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="imagen2.jpg" class="d-block w-100" alt="...">
+        <img src="/images/carrusel/funko-pop-animation-attack-on-titan-battle-levi-exclusive-figure-1169-1.jpg" class="d-block img-fluid" alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h5>Título 2</h5>
-          <p>Descripción 2</p>
         </div>
       </div>
-      <!-- Agrega más elementos si es necesario -->
+      <div class="carousel-item">
+        <img src="/images/carrusel/funko-pop-animation-jujutsu-kaisen-yuji-itadori-divergent-fist-glow-in-the-dark-aaa-exclusivo.jpg" class="d-block img-fluid" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="/images/carrusel/funko-pop-anime-one-piece-luffy-gear-five.jpg"class="d-block img-fluid" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="/images/carrusel/s-l1200.jpg"class="d-block img-fluid" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="/images/carrusel/s-l1600.jpg"class="d-block img-fluid" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="/images/carrusel/unnamed.png" class="d-block img-fluid" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+        </div>
+      </div>
+      <!-- Agrega más elementos aquí para más imágenes -->
     </div>
     <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -62,27 +123,16 @@
       <span class="sr-only">Siguiente</span>
     </a>
   </div>
+</div>
 
-  <!-- Contenido principal -->
+ <!-- Pie de página -->
+ <footer class="footer">
   <div class="container">
-    <h2>Galería de imágenes</h2>
-    <!-- Aquí puedes colocar la galería de imágenes usando Bootstrap Grid -->
+    <img src="/images/logos/Screenshot_1-removebg-preview.png" alt="Luffytaro">
+    <h1> </h1>
+    <span>Luffytaro - 2024</span>
   </div>
-
-  <!-- Formulario de pedidos -->
-  <div class="container">
-    <h2>Formulario de Pedidos</h2>
-    <form>
-      <!-- Aquí puedes agregar los campos del formulario -->
-    </form>
-  </div>
-
-  <!-- Pie de página -->
-  <footer class="footer">
-    <div class="container">
-      <span class="text-muted">Aprendiendo HTML - 2024</span>
-    </div>
-  </footer>
+</footer>
 
   <!-- Bootstrap JS y jQuery (si es necesario) -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
@@ -90,3 +140,4 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
+
