--- a/formulario.html
+++ b/formulario.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Luffytaro - Formulario de Compra</title>
-  <!-- Bootstrap CSS -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <!-- Estilos personalizados -->
   <link rel="stylesheet" href="styles.css">
   <style>
     body {
@@ -47,7 +48,7 @@
 </head>
 <body>
 
-  <!-- Navbar -->
+  <!-- Barra items -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
       <a class="navbar-brand" href="#"><img src="/images/logos/Screenshot_1-removebg-preview.png" alt="Luffytaro"></a>
@@ -107,13 +108,8 @@
   <!-- Pie de página -->
   <footer class="footer">
     <div class="container">
-      <span class="text-muted">Aprendiendo HTML - 2024</span>
+      <span class="text-muted">Luffytaro - 2024</span>
     </div>
   </footer>
-
-  <!-- Bootstrap JS y jQuery (si es necesario) -->
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
