--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Bootstrap CSS -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <!-- Estilos personalizados -->
   <link rel="stylesheet" href="styles.css">
   <style>
     body {
@@ -15,16 +17,16 @@
     .navbar {
       background-color: #b4d4ff !important; /* Color de la barra de navegación */
       border-bottom: 1px solid #6fa3ef; /* Borde inferior */
-      height: 30px; /* Altura del navbar */
+      height: 50px; /* Altura del navbar */
       padding-top: 0; /* Espacio superior */
       padding-bottom: 0; /* Espacio inferior */
     }
     .navbar-brand img {
-      max-height: 30px; /* Altura máxima de la imagen */
+      max-height: 25px; /* Altura máxima de la imagen */
     }
     .navbar-nav .nav-link {
       color: #ffffff !important; /* Color del texto en la barra de navegación */
-      font-size: 14px; /* Tamaño de fuente */
+      font-size: 16px; /* Tamaño de fuente */
     }
     .navbar-nav .nav-link:hover {
       color: #6fa3ef !important; /* Cambio de color al pasar el cursor sobre los ítems de navegación */
@@ -39,7 +41,7 @@
       background-color: #b4d4ff;
       color: #238636;
       text-align: center;
-      padding: 20px 0;
+      padding: 0px 0;
       margin-top: 50px;
     }
   </style>
@@ -75,7 +77,7 @@
  <!-- Contenido principal -->
  <div class="container text-center">
   <!-- Carrusel -->
-  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <div id="carouselExampleControls" class="carousel slide mx-auto" style="width: 80%;" data-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img src="/images/carrusel/funko-pop-700-leorio-hunter-x-hunter-anime-.jpg" class="d-block img-fluid" alt="...">
@@ -88,7 +90,12 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="/images/carrusel/funko-pop-animation-jujutsu-kaisen-yuji-itadori-divergent-fist-glow-in-the-dark-aaa-exclusivo.jpg" class="d-block img-fluid" alt="...">
+        <img src="/images/carrusel/FUNKO-POP-ANIMATION-ATTACK-ON-TITAN-EREN-YEAGER-800x800.jpeg" class="d-block img-fluid" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="/images/carrusel/funko-pop-animation-jujutsu-kaisen-yuji-itadori-divergent-fist-glow-in-the-dark-aaa-exclusivo.jpg"class="d-block img-fluid" alt="...">
         <div class="carousel-caption d-none d-md-block">
         </div>
       </div>
@@ -98,21 +105,41 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="/images/carrusel/s-l1200.jpg"class="d-block img-fluid" alt="...">
+        <img src="/images/carrusel/funko-pop-carrot-1588-one-piece.jpg"class="d-block img-fluid" alt="...">
         <div class="carousel-caption d-none d-md-block">
         </div>
       </div>
       <div class="carousel-item">
-        <img src="/images/carrusel/s-l1600.jpg"class="d-block img-fluid" alt="...">
+        <img src="/images/carrusel/gsc_117433030_1775973_1.avif" class="d-block img-fluid" alt="...">
         <div class="carousel-caption d-none d-md-block">
         </div>
       </div>
       <div class="carousel-item">
-        <img src="/images/carrusel/unnamed.png" class="d-block img-fluid" alt="...">
+        <img src="/images/carrusel/gsc_118263350_2033732_1.avif" class="d-block img-fluid" alt="...">
         <div class="carousel-caption d-none d-md-block">
         </div>
       </div>
-      <!-- Agrega más elementos aquí para más imágenes -->
+      <div class="carousel-item">
+        <img src="/images/carrusel/gsc_127049780_4790951_1.avif" class="d-block img-fluid" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="/images/carrusel/gsc_129550971_5633350_1.avif" class="d-block img-fluid" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="/images/carrusel/pop-naruto-sakura6948.jpg" class="d-block img-fluid" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="/images/carrusel/s-l1200.jpg" class="d-block img-fluid" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+        </div>
+      </div>
+
     </div>
     <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -133,11 +160,5 @@
     <span>Luffytaro - 2024</span>
   </div>
 </footer>
-
-  <!-- Bootstrap JS y jQuery (si es necesario) -->
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
-
