--- a/contacto.html
+++ b/contacto.html
@@ -3,95 +3,92 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Luffytaro - Contacto</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  <!-- CSS-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+        crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
+
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #ffffff; /* Fondo blanco */
+      background-color: #ffffff; 
     }
     .navbar {
-      background-color: #b4d4ff !important; /* Color de la barra de navegación */
-      border-bottom: 1px solid #6fa3ef; /* Borde inferior */
-      height: 40px; /* Altura del navbar */
-      padding-top: 0; /* Espacio superior */
-      padding-bottom: 0; /* Espacio inferior */
+      background-color: #b4d4ff !important; 
+      border-bottom: 1px solid #6fa3ef; 
+      height: 50px; 
+      padding-top: 0; 
+      padding-bottom: 0; 
     }
     .navbar-brand img {
-      max-height: 30px; /* Altura máxima de la imagen */
+      max-height: 30px; 
     }
     .navbar-nav .nav-link {
-      color: #ffffff !important; /* Color del texto en la barra de navegación */
-      font-size: 14px; /* Tamaño de fuente */
+      color: #ffffff !important; 
+      font-size: 16px; 
     }
     .navbar-nav .nav-link:hover {
-      color: #6fa3ef !important; /* Cambio de color al pasar el cursor sobre los ítems de navegación */
+      color: #6fa3ef !important; 
     }
     .navbar-toggler {
-      border-color: #ffffff !important; /* Color del icono del botón de navegación */
+      border-color: #ffffff !important; 
     }
     .navbar-toggler-icon {
-      background-color: #ffffff; /* Color del icono del botón de navegación */
+      background-color: #ffffff; 
     }
     .footer {
       background-color: #b4d4ff;
       color: #238636;
       text-align: center;
       padding: 20px 0;
-      margin-top: auto; /* Coloca el footer al final de la página */
+      margin-top: auto; 
     }
     .card {
       border-radius: 15px;
       border: 2px solid #b4d4ff;
-      background-color: #f0f8ff; /* Azul claro */
+      background-color: #f0f8ff; 
       margin-bottom: 20px; /* Margen inferior entre tarjetas */
       text-align: center; /* Centrar el texto dentro de las tarjetas */
     }
     .card-header {
-      background-color: #b4d4ff; /* Azul */
-      color: #fff; /* Texto blanco */
+      background-color: #b4d4ff; 
+      color: #fff; 
     }
     .card-header h5 {
       margin-bottom: 0;
     }
-    .footer {
-     position: fixed;
-      left: 0;
-      bottom: 0;
-      width: 100%;
-      background-color: #b4d4ff;
-     color: #238636;
-     text-align: center;
-      padding: 20px 0;
-    }
+    
     a {
     cursor: pointer; /* mouse cambia a manito */
     }
   </style>
-  <!--HTML-->
 </head>
 <body>
   <!-- Barra de item -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
       <a class="navbar-brand" href="#"><img src="/images/logos/Screenshot_1-removebg-preview.png" alt="Luffytaro"></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+              aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
+        <ul class="navbar-nav ms-auto">
           <li class="nav-item">
             <a class="nav-link" href="index.html">Inicio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="galeria.html">Galería</a>
           </li>
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="contacto.html">Contacto</a>
           </li>
           <li class="nav-item">
@@ -142,23 +139,31 @@
     </div>
   </div>
 </div>
+<div class="col-md-4 mb-4 mx-auto">
+  <div class="card">
+    <div class="card-header">
+      <h5 class="mb-0">Horario de atención</h5>
+    </div>
+    <div class="card-body">
+      <p class="card-text"> Lunes a Viernes: 9:00 AM - 6:00 PM</li>
+        <p class="card-text">Sábados: 9:00 AM - 1:00 PM</li>
+          <p class="card-text">Domingos: Cerrado</li>
+    </div>
+  </div>
+</div>
+</div>
+</div>
 
 <!-- Pie de página -->
 <footer class="footer">
-  <div class="container">
-    <h5 class="mb-3">Redes sociales</h5>
+  <div class="container">  
     <ul class="list-unstyled">
-      <li><a href="#"><i class="fab fa-facebook"></i> Facebook</a></li>
-      <li><a href="#"><i class="fab fa-twitter"></i> Twitter</a></li>
-      <li><a href="#"><i class="fab fa-instagram"></i> Instagram</a></li>
-    </ul>
-    <h5 class="mb-3">Horario de atención</h5>
-    <ul class="list-unstyled mb-0">
-      <li><strong>Lunes a Viernes:</strong> 9:00 AM - 6:00 PM</li>
-      <li><strong>Sábados:</strong> 9:00 AM - 1:00 PM</li>
-      <li><strong>Domingos:</strong> Cerrado</li>
+      <li><a href="#"><i class="bi bi-facebook"></i> Facebook</a></li>
+      <li><a href="#"><i class="bi bi-twitter"></i> Twitter</a></li>
+      <li><a href="#"><i class="bi bi-instagram"></i> Instagram</a></li>
     </ul>
   </div>
 </footer>
+
 </body>
 </html>
