--- a/formulario.html
+++ b/formulario.html
@@ -3,39 +3,44 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Luffytaro - Formulario de Compra</title>
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <link rel="stylesheet" href="styles.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+        crossorigin="anonymous"></script>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #ffffff; /* Fondo blanco */
+      background-color: #ffffff; 
     }
     .navbar {
-      background-color: #b4d4ff !important; /* Color de la barra de navegación */
-      border-bottom: 1px solid #6fa3ef; /* Borde inferior */
-      height: 30px; /* Altura del navbar */
-      padding-top: 0; /* Espacio superior */
-      padding-bottom: 0; /* Espacio inferior */
+      background-color: #b4d4ff !important; 
+      border-bottom: 1px solid #6fa3ef; 
+      height: 50px; 
+      padding-top: 0; 
+      padding-bottom: 0; 
     }
     .navbar-brand img {
-      max-height: 30px; /* Altura máxima de la imagen */
+      max-height: 30px; 
     }
     .navbar-nav .nav-link {
-      color: #ffffff !important; /* Color del texto en la barra de navegación */
-      font-size: 14px; /* Tamaño de fuente */
+      color: #ffffff !important; 
+      font-size: 16px; 
     }
     .navbar-nav .nav-link:hover {
-      color: #6fa3ef !important; /* Cambio de color al pasar el cursor sobre los ítems de navegación */
+      color: #6fa3ef !important; 
     }
     .navbar-toggler {
-      border-color: #ffffff !important; /* Color del icono del botón de navegación */
+      border-color: #ffffff !important; 
     }
     .navbar-toggler-icon {
-      background-color: #ffffff; /* Color del icono del botón de navegación */
+      background-color: #ffffff; 
     }
     .footer {
       background-color: #b4d4ff;
@@ -49,18 +54,19 @@
 <body>
 
   <!-- Barra items -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
       <a class="navbar-brand" href="#"><img src="/images/logos/Screenshot_1-removebg-preview.png" alt="Luffytaro"></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+              aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
+        <ul class="navbar-nav ms-auto">
           <li class="nav-item">
             <a class="nav-link" href="index.html">Inicio</a>
           </li>
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="galeria.html">Galería</a>
           </li>
           <li class="nav-item">
@@ -73,7 +79,7 @@
       </div>
     </div>
   </nav>
-  <!-- Contenido principal -->
+  <!-- Formulario -->
   <div class="container my-5">
     <h2>Formulario de Pedidos</h2>
     <form>
@@ -95,7 +101,7 @@
       </div>
       <div class="form-group">
         <label for="anime">Anime:</label>
-        <input type="text" class="form-control" id="anime" placeholder="Escribe el nombre del anime" required>
+        <input type="date" class="form-control" id="anime" placeholder="Escribe el nombre del anime" required>
       </div>
       <div class="form-group">
         <label for="descripcion">Descripción:</label>
